Added some more unit tests